rochargen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rochargen
  labels:
    app: rochargen
spec:
  selector:
    matchLabels:
      name: rochargen
  template:
    metadata:
      labels:
        name: rochargen
        service: rochargen
    spec:
      containers:
      - args:
        image: rochargen
        imagePullPolicy: Always
        name: rochargen
        ports:
        - containerPort: 80
        volumeMounts:
        - name: grf-files
          mountPath: /grf-files
        - name: data-folder
          mountPath: /var/www/html/client/data
      volumes:
      - name: grf-files
        persistentVolumeClaim:
          claimName: grf-files-pvc
      - name: data-folder
        persistentVolumeClaim:
          claimName: data-folder-pvc
